fixed on small devices.

--- a/src/app/components/main/main.css
+++ b/src/app/components/main/main.css
@@ -5,5 +5,10 @@
 
     .section {
     	padding-top: 0 !important;
+    	margin-right: -53px !important;
+    }
+
+    .homepage {
+    	margin-right: -68px !important;
     }
 }
